--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format": "prettier-standard index.js",
     "format:fix": "npm run format -- --fix",
     "start": "npm run test",
-    "precommit": "npm test",
+    "precommit": "npm run format",
     "pretest": "npm run format:fix",
     "docs": "npm run docs:readme && npm run docs:html",
     "docs:readme": "documentation readme index.js --section=API",
