--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
   "scripts": {
     "test": "jest",
     "test:cov": "npm run test -- --coverage",
-    "format": "prettier-standard index.js",
-    "start": "npm run test",
-    "precommit": "npm run format",
-    "pretest": "npm run format",
+    "lint": "standard --fix",
     "docs": "npm run docs:readme && npm run docs:html",
     "docs:readme": "documentation readme index.js --section=API",
     "docs:html": "documentation build index.js -f html -o docs"
@@ -27,14 +24,18 @@
   "author": "tiaanduplessis <tiaanduplessis@hotmail.com>",
   "devDependencies": {
     "documentation": "^8.0.0",
-    "husky": "^0.14.3",
-    "jest": "^22.2.1",
-    "prettier-standard": "^8.0.0"
+    "jest": "^23.1.0",
+    "standard": "^11.0.1"
   },
   "dependencies": {
     "base-64": "^0.1.0",
-    "fast-safe-stringify": "^2.0.2",
-    "node-fetch": "^2.0.0",
-    "qs": "^6.5.1"
+    "node-fetch": "^2.1.2",
+    "qs": "^6.5.2"
+  },
+  "standard": {
+    "ignore": ["docs"],
+    "env": {
+      "jest": true
+    }
   }
 }
