--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "docs:readme": "documentation readme index.js --section=API",
     "docs:html": "documentation build index.js -f html -o docs"
   },
-  "author": "tiaanduplessis <tiaanduplessis@hotmail.com>",
+  "author": "Tiaan du Plessis <tiaanduplessis@hotmail.com>",
   "devDependencies": {
-    "documentation": "^9.0.0",
-    "jest": "^23.1.0",
-    "standard": "^12.0.0"
+    "documentation": "^9.2.1",
+    "jest": "^24.1.0",
+    "standard": "^12.0.1"
   },
   "dependencies": {
     "base-64": "^0.1.0",
-    "node-fetch": "^2.1.2",
-    "qs": "^6.5.2"
+    "node-fetch": "^2.3.0",
+    "qs": "^6.6.0"
   },
   "standard": {
     "ignore": ["docs"],
